[package]
name = "wavemux"
version = "0.1.0"
edition = "2024"
authors = ["Tobias Wooldridge <git@thw.au>"]
description = "Multiplexed audio stream protocol for SDR applications"
license = "MIT"
repository = "https://github.com/TobiasWooldridge/wavemux"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
